--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
     "express": "^4.15.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "source-map-loader": "^0.2.1",
+    "typescript": "^2.3.3",
+    "webpack": "^2.6.1"
   }
 }
