--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^15.0.25",
     "@types/react-dom": "^15.5.0",
     "express": "^4.15.3",
+    "material-shadows": "^3.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
