--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass-loader": "^6.0.5",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.3.3",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.6.1"
   }
 }
