Fontello include pdf

--- a/public/fontello/config.json
+++ b/public/fontello/config.json
@@ -14,7 +14,7 @@
     },
     {
       "uid": "0f6a2573a7b6df911ed199bb63717e27",
-      "css": "github-circled",
+      "css": "github",
       "code": 61595,
       "src": "fontawesome"
     },
@@ -29,6 +29,26 @@
       "css": "globe",
       "code": 59392,
       "src": "fontawesome"
+    },
+    {
+      "uid": "9daa1fdf0838118518a7e22715e83abc",
+      "css": "resume",
+      "code": 61889,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "825141fbf4908964e707839ab2380b4b",
+      "css": "react.js",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M499.2 329.4C611.5 329.4 715.8 345.5 794.4 372.6 889.1 405.2 947.4 454.6 947.4 499.4 947.4 546 885.6 598.6 783.9 632.3 707 657.7 605.8 671 499.2 671 390 671 286.5 658.6 208.7 632 110.3 598.3 51 545.1 51 499.4 51 455 106.7 405.9 200.1 373.4 279 345.8 385.9 329.4 499.2 329.4ZM351.2 414.9C407.3 317.6 473.4 235.3 536.1 180.7 611.7 115 683.6 89.2 722.4 111.6 762.8 134.9 777.5 214.6 755.8 319.6 739.5 398.9 700.4 493.2 647.2 585.6 592.6 680.2 530.1 763.6 468.2 817.7 389.9 886.1 314.2 910.9 274.6 888 236.1 865.8 221.4 793.2 239.9 696 255.5 613.9 294.6 513.1 351.2 414.9ZM351.4 585.8C295.1 488.7 256.8 390.3 240.8 308.7 221.6 210.4 235.2 135.2 274 112.8 314.3 89.4 390.7 116.5 470.9 187.7 531.4 241.5 593.7 322.4 647.1 414.6 701.8 509.2 742.8 605 758.8 685.6 779 787.6 762.6 865.6 723 888.5 684.6 910.7 614.3 887.2 539.3 822.7 475.9 768.1 408.2 683.9 351.4 585.8Z",
+        "width": 1000
+      },
+      "search": [
+        "react.js"
+      ]
     }
   ]
 }
