--- a/package.json
+++ b/package.json
@@ -4,28 +4,19 @@
   "description": "My personal resume site, now with inf times more React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ts-node build.tsx"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@types/express": "^4.0.37",
-    "@types/react": "^15.6.4",
-    "@types/react-dom": "^15.5.5",
-    "express": "^4.16.3",
-    "material-shadows": "^3.0.1",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.2.3",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.2",
-    "typescript": "^2.5.3",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^2.7.0"
+    "@types/node": "^20.12.4",
+    "@types/react": "^18.2",
+    "@types/react-dom": "^18.2",
+    "material-shadows": "^3.0.1",
+    "react": "^18.2",
+    "react-dom": "^18.2"
   }
 }
